--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <main>
         <div class="navbar">
           <div class="pages">
-            <img src="assets/logo.png" alt="logo">
-            <a href="index.html">Home</a>
+            <a href="index.html">
+              <img src="assets/logo.png" alt="logo">
+            </a>
             <a href="pricing.html">Pricing</a>
             <a href="teams.html">For Teams</a>
             <a href="individuals.html">For Individuals</a>
@@ -21,7 +22,6 @@
           </div>
           <div class="general">
             <a href="help.html">Help</a>
-            <a href="login.html">Login</a>
             <a href="download.html" class="btn">Download</a>
           </div>
         </div>
@@ -29,14 +29,14 @@
             <div class="head">
               <div class="title">
                 <img src="assets/link.png" />
-                <span class="title">To the Future</span>
+                <span class="title">  To the Future</span>
               </div>
               <div class="description">
                 Access a new way to note-take, connect, and link with other students through new solutions to accessibility. 
               </div>
               <div class="actions">
                 <a href="register.html" class="signup">Sign Up</a>
-                <a href="login.html" class="signin">Already a User? Sign In</a>
+                <a href="login.html" class="signin">Already a User? Sign In</a> 
               </div>
             </div>
             <img src="assets/phone-demo.png" class="phone" />
