--- a/notes.html
+++ b/notes.html
@@ -11,8 +11,9 @@
   <body>
     <div class="navbar">
         <div class="pages">
-          <img src="assets/logo.png" alt="logo">
-          <a href="index.html">Home</a>
+          <a href="index.html">
+            <img src="assets/logo.png" alt="logo">
+          </a>
           <a href="pricing.html">Pricing</a>
           <a href="teams.html">For Teams</a>
           <a href="individuals.html">For Individuals</a>
@@ -20,7 +21,6 @@
         </div>
         <div class="general">
           <a href="help.html">Help</a>
-          <a href="index.html" class="logout">Logout</a>
           <a href="download.html" class="btn">Download</a>
         </div>
       </div>
