different css and js folders

--- a/pages/download.html
+++ b/pages/download.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/download.css">
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
@@ -28,4 +28,5 @@
         downlaod
     </div>
   </body>
+  <script src="./js/download.js"></script>
 </html>
