--- a/pages/mission.html
+++ b/pages/mission.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/mission.css">
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
@@ -24,20 +24,9 @@
           <a href="download.html" class="btn">Download</a>
         </div>
       </div>
-    <div class="notes_main">
-        <div class="sidebar">
-            <div class="top">
-                <span>Files</span>
-                <button class="add_file">+</button>
-            </div>
-            <div class="files">
-
-            </div>
-        </div>
-        <div class="notes">
-            <textarea name="writing" cols="30" rows="10" class="writing"></textarea>
-        </div>
+    <div class="main">
+        mission
     </div>
   </body>
-  <script src="script.js"></script>
+  <script src="./js/mission.js"></script>
 </html>
