--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
@@ -46,4 +46,5 @@
     </main>
 	<script src="script.js"></script>
   </body>
+  <script src="./js/index.js"></script>
 </html>
