--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/individuals.css">
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
@@ -25,7 +25,8 @@
         </div>
       </div>
     <div class="main">
-        Pricing
+        For Individuals
     </div>
   </body>
+  <script src="./js/individuals.js"></script>
 </html>
