--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
@@ -25,7 +25,12 @@
         </div>
       </div>
     <div class="main">
-        mission
+        <form class="login_form">
+            <input type="username" placeholder="Username...">
+            <input type="password" placeholder="Password...">
+            <input type="submit" value="Log In">
+        </form>
     </div>
   </body>
+  <script src="./js/login.js"></script>
 </html>
