--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../style.css">
+
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
