--- a/pages/register.html
+++ b/pages/register.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
     <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
   <body>
