pricing page updates

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -26,7 +26,17 @@
         </div>
       </div>
     <div class="main">
-        Pricing
+      <div class = "title">
+        <img src="assets/link.png"/>
+        <span class="title">  our plans and pricing</span>
+      </div>
+    </div>
+      <div class="semi-transparent-square">
+        <div class="white-square">
+          <span class="title">Basic</span>
+        </div>
+        <div class="white-square"></div>
+      </div>
     </div>
   </body>
   <script src="./js/pricing.js"></script>
