--- a/pages/index.html
+++ b/pages/index.html
@@ -37,8 +37,8 @@
                 Access a new way to note-take, connect, and link with other students through new solutions to accessibility. 
               </div>
               <div class="actions">
-                <a href="register.html" class="signup">Sign Up</a>
-                <a href="login.html" class="signin">Already a User? Sign In</a> 
+                <a href="../pages/register.html" class="signup">Sign Up</a>
+                <a href="../pages/login.html" class="signin">Already a User? Sign In</a> 
               </div>
             </div>
             <img src="assets/phone-demo.png" class="phone" />
