--- a/pages/register.html
+++ b/pages/register.html
@@ -25,9 +25,17 @@
           <a href="download.html" class="btn">Download</a>
         </div>
       </div>
-    <div class="main">
+    <main class="register">
         Register
-    </div>
+        <input type="text" class = 'email' placeholder="email">
+        <input type="text" class = 'username' placeholder="username">
+        <input type="password" class = 'password' placeholder="password">
+        <input type="password" class = 'confirm-password' placeholder="confirm password">
+        <button class = 'register-btn'>Register</button>
+        <a href="./login.html">Already a user? Sign in</a>
+
+        <button class="test">signout</button>
+    </main>
   </body>
-  <script src="./js/register.js"></script>
+  <script type = 'module' src="./js/register.js"></script>
 </html>
