--- a/pages/teams.html
+++ b/pages/teams.html
@@ -27,6 +27,8 @@
       </div>
     <div class="main">
         For teams
+        <img src="assets/splash-img.png" class="splash" />
+        <img src="assets/computer.png" class="computer" />
     </div>
   </body>
   <script src="./js/teams.js"></script>
