--- a/pages/index.html
+++ b/pages/index.html
@@ -43,6 +43,7 @@
             </div>
             <img src="assets/phone-demo.png" class="phone" />
             <img src="assets/splash-img.png" class="splash" />
+            <img src="assets/computer.png" class="computer" />
         </div>
         <span class="copy">Copyright © 2023, Western Developers Society</div>
     </main>
