--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -26,16 +26,33 @@
         </div>
       </div>
     <div class="main">
-      <div class = "title">
+      <img src="assets/splash-img.png" class="splash" />
+      <div class = "top">
         <img src="assets/link.png"/>
-        <span class="title">  our plans and pricing</span>
+        <span class="top">  our plans and pricing</span>
       </div>
     </div>
       <div class="semi-transparent-square">
         <div class="white-square">
-          <span class="title">Basic</span>
+          <span class="plan">Basic</span>
+          <span class="price">Free</span>
+          <span class="features">Simple, easy-to-use, and completely free!</span>
+          <span class="features">Accessible voice to text feature</span>
+          <span class="features">Basic note functions and features included!</span> 
+          <div class="button">
+            <a href="register.html" class="start">Get started!</a>
+          </div>
         </div>
-        <div class="white-square"></div>
+        <div class="white-square">
+          <span class="plan">Link premium</span>
+          <span class="price">$0.99/month</span>
+          <span class="features">Unlimited notes, colors and edits</span>
+          <span class="features">Math and physics help feature</span>
+          <span class="features">Sync to cloud with convenience and ease</span> 
+          <div class="button">
+            <a href="register.html" class="start">Get started!</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
