--- a/pages/notes.html
+++ b/pages/notes.html
@@ -40,5 +40,5 @@
         </div>
     </div>
   </body>
-  <script src="./js/notes.js"></script>
+  <script type = 'module' src="./js/notes.js"></script>
 </html>
