--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InkLink</title>
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="../style.css">
+    <!-- <link rel="stylesheet" href="../style.css"> -->
 
     <link rel="icon" href="assets/link.png" type="image/x-icon">
   </head>
@@ -44,6 +44,7 @@
             <img src="assets/phone-demo.png" class="phone" />
             <img src="assets/splash-img.png" class="splash" />
             <img src="assets/computer.png" class="computer" />
+            
         </div>
         <span class="copy">Copyright © 2023, Western Developers Society</div>
     </main>
