--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,12 @@
             </div>
             <img src="assets/phone-demo.png" class="phone" />
             <img src="assets/splash-img.png" class="splash" />
+
             <img src="assets/computer.png" class="computer" />
+            </div>
+            <div class="teamsdescription">
+              InkLink revolutionizes team collaboration by prioritizing both accessibility needs and essential collaboration functions. Teams do not need to worry as InkLink can seamlessly share, organize, and access notes while catering to diverse accessibility requirements.  
+            </div>
             
         </div>
         <span class="copy">Copyright © 2023, Western Developers Society</div>
