--- a/pages/login.html
+++ b/pages/login.html
@@ -26,11 +26,34 @@
         </div>
       </div>
     <div class="main">
-        <form class="login_form">
-            <input type="username" placeholder="Username...">
-            <input type="password" placeholder="Password...">
-            <input type="submit" value="Log In">
-        </form>
+      <div class="login-box">
+        <div class="login-header">
+          Login          
+        </div>
+        <div class="login-form-div">
+          <form class="login_form">
+              <input class="text-box" type="username" placeholder="Email">
+              <input class="text-box" type="password" placeholder="Password">
+              <input class="submit-button" type="submit" value="Login">
+          </form>
+        </div>
+
+        <div class="forgot-password">
+          <input class="alternative-button" type="submit" value="Forgot password?">
+        </div>
+
+        <div class="horizontal-line">
+          <h2><span>OR</span></h2>
+        </div>
+        <div class="alternate-login">
+          <img class="icons" src="assets/github.png" alt="">
+          <img class="icons" src="assets/google.png" alt="">
+          <img class="icons" src="assets/facebook.png" alt="">
+        </div>
+        <div class="no-account">
+          <input class="alternative-button" type="submit" value="Don't have an account?">
+        </div>
+      </div>
     </div>
   </body>
   <script type="module" src="./js/login.js"></script>
