mission statement draft

--- a/pages/mission.html
+++ b/pages/mission.html
@@ -26,8 +26,22 @@
         </div>
       </div>
     <div class="main">
-        mission
+      <div class = "top">
+        <img src="assets/link.png"/>
+        <span class="top">  our mission</span>
+      </div>
+      <div class="transparent-square">
+        <span class="statement">"At INKLINK, we're dedicated to accessible learning for all. Our note-taking app breaks barriers, empowering diverse learners with an inclusive, user-friendly tool. We're committed to removing obstacles, from language challenges to various disabilities, ensuring everyone can thrive in their educational journey. Our mission is simple: making learning seamless and inclusive for a brighter, barrier-free future."</span>
+        <span class="statement">-Stephanie Wong</span>
+      </div>
+      <img src="assets/splash-img.png" class="steph" />
+      <img src="  assets/ceo.png" class="steph" />
+      <img src="  assets/growth.png" class="growth" />
+      <div class="growth-square">
+        <span class="growth-statement">Note-taking has undergone a remarkable transformation in recent years, evolving from traditional pen-and-paper methods to a digital landscape enriched with innovative tools and collaborative platforms. The shift towards more accessible, adaptable, and interactive note-taking methods reflects a growing trend in personalized learning, emphasizing convenience, accessibility, and the seamless integration of multimedia elements.</span>
+      </div>
+    </div>
     </div>
   </body>
-  <script src="./js/mission.js"></script>
+  <script src="./js/pricing.js"></script>
 </html>
