pushing login cc

--- a/pages/download.html
+++ b/pages/download.html
@@ -26,7 +26,19 @@
         </div>
       </div>
     <div class="main">
-        downlaod
+      <span class="header">Download InkLink</span>
+      <span class="dldescription">inclusive and user-friendly note-taking app</span>
+      <div class="container">
+        <div class="box">
+          <img src="assets/windows.png" class="logo">
+        </div>
+        <div class="box">
+          <img src="assets/linux.png" class="logo">
+        </div>
+        <div class="box">
+          <img src="assets/apple.png" class="logo">
+        </div>
+      </div>
     </div>
   </body>
   <script src="./js/download.js"></script>
