--- a/pages/download.html
+++ b/pages/download.html
@@ -30,13 +30,22 @@
       <span class="dldescription">inclusive and user-friendly note-taking app</span>
       <div class="container">
         <div class="box">
+          <a href="InkLink.txt" download>
           <img src="assets/windows.png" class="logo">
+          <button>Download WindowsOS</button>
+          </a>
         </div>
         <div class="box">
+          <a href="InkLink.txt" download>
           <img src="assets/linux.png" class="logo">
+          <button>Download Linux</button>
+          </a>
         </div>
         <div class="box">
-          <img src="assets/apple.png" class="logo">
+          <a href="InkLink.txt" download>
+            <img src="assets/apple.png" class="logo">
+            <button>Download MacOS</button>
+          </a>
         </div>
       </div>
     </div>
