--- a/pages/index.html
+++ b/pages/index.html
@@ -49,6 +49,8 @@
             <div class="teamsdescription">
               InkLink revolutionizes team collaboration by prioritizing both accessibility needs and essential collaboration functions. Teams do not need to worry as InkLink can seamlessly share, organize, and access notes while catering to diverse accessibility requirements.  
             </div>
+
+            <div class="my-box"></div>
             
         </div>
         <span class="copy">Copyright © 2023, Western Developers Society</div>
