--- a/pages/register.html
+++ b/pages/register.html
@@ -26,14 +26,21 @@
         </div>
       </div>
     <main class="register">
-        Register
-        <input type="text" class = 'email' placeholder="email">
-        <input type="text" class = 'username' placeholder="username">
-        <input type="password" class = 'password' placeholder="password">
-        <input type="password" class = 'confirm-password' placeholder="confirm password">
-        <button class = 'register-btn'>Register</button>
-        <a href="./login.html">Already a user? Sign in</a>
-
+      <div class="register-box">
+        <div class="register-header">
+          Register
+        </div>
+        <div class="register-form-div">
+          <form class="register_form">
+            <input type="text" class = 'email' placeholder="email">
+            <input type="text" class = 'username' placeholder="username">
+            <input type="password" class = 'password' placeholder="password">
+            <input type="password" class = 'confirm-password' placeholder="confirm password">
+            <button class = 'register-btn'>Sign up</button>
+            <a href="./login.html">Already a user? Sign in</a>
+          </form>
+        </div>
+      </div>      
         <button class="test">signout</button>
     </main>
   </body>
