mission statement resized

--- a/pages/download.html
+++ b/pages/download.html
@@ -43,7 +43,7 @@
         </div>
         <div class="box">
           <img src="assets/apple.png" class="logo">
-          <a href="InkLink.txt" download>
+          <a href="inklink.txt" download>
             <button>Download MacOS</button>
           </a>
         </div>
