added mobile options

--- a/pages/download.html
+++ b/pages/download.html
@@ -27,7 +27,7 @@
       </div>
     <div class="main">
       <span class="header">Download InkLink</span>
-      <span class="dldescription">inclusive and user-friendly note-taking app</span>
+      <span class="dldescription">For PC</span>
       <div class="container">
         <div class="box">
           <img src="assets/windows.png" class="logo">
@@ -45,6 +45,22 @@
           <img src="assets/apple.png" class="logo">
           <a href="inklink.txt" download>
             <button>Download MacOS</button>
+          </a>
+        </div>
+      </div>
+      <span class="header">Download InkLink</span>
+      <span class="dldescription">For Mobile</span>
+      <div class="container">
+        <div class="box">
+          <img src="assets/apple.png" class="logo">
+          <a href="InkLink.txt" download>
+          <button>Download IOS</button>
+          </a>
+        </div>
+        <div class="box">
+          <img src="assets/android.png" class="logo">
+          <a href="InkLink.txt" download>
+          <button>Download Android</button>
           </a>
         </div>
       </div>
