--- a/pages/notes.html
+++ b/pages/notes.html
@@ -35,7 +35,7 @@
         <div class="general">
           <button>search</button>
           <button>copy</button>
-          <button>mic</button>
+          <button class="mic-btn">mic</button>
           <button>share</button>
           <button>settings</button>
         </div>
