login/register error handling

--- a/pages/login.html
+++ b/pages/login.html
@@ -37,7 +37,9 @@
               <input class="submit-button" type="submit" value="Login">
           </form>
         </div>
+        <div class="invalid-login">
 
+        </div>
         <div class="forgot-password">
           <input class="alternative-button" type="submit" value="Forgot password?">
         </div>
