--- a/pages/register.html
+++ b/pages/register.html
@@ -33,9 +33,21 @@
         <div class="register-form-div">
           <div class="register_form">
             <input type="text" class = 'email' placeholder="email">
+            <div class="invalid invalid-email">
+
+            </div>
             <input type="text" class = 'username' placeholder="username">
+            <div class="invalid invalid-username">
+
+            </div>
             <input type="password" class = 'password' placeholder="password">
+            <div class="invalid invalid-password">
+
+            </div>
             <input type="password" class = 'confirm-password' placeholder="confirm password">
+            <div class="invalid invalid-confirm-password">
+
+            </div>
             <button class = 'register-btn'>Sign up</button>
             <a href="./login.html">Already a user? Sign in</a>
           </div>
