--- a/pages/notes.html
+++ b/pages/notes.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="pens">
-          <button>pencil</button>
+          <!-- <button>pencil</button> -->
           <button>pen</button>
           <button>highlighter</button>
           <button>eraser</button>
