--- a/pages/notes.html
+++ b/pages/notes.html
@@ -27,9 +27,9 @@
 
         <div class="pens">
           <!-- <button>pencil</button> -->
-          <button>pen</button>
-          <button>highlighter</button>
-          <button>eraser</button>
+          <button class = 'p'>pen</button>
+          <button class = 'e'>eraser</button>
+          <button class = 'h'>highlighter</button>
         </div>
 
         <div class="general">
