Make the teams description a container

--- a/pages/index.html
+++ b/pages/index.html
@@ -46,11 +46,12 @@
 
             <img src="assets/computer.png" class="computer" />
             </div>
+            
+            <div class="my-box">
             <div class="teamsdescription">
               InkLink revolutionizes team collaboration by prioritizing both accessibility needs and essential collaboration functions. Teams do not need to worry as InkLink can seamlessly share, organize, and access notes while catering to diverse accessibility requirements.  
             </div>
-
-            <div class="my-box"></div>
+          </div>
             
             <div class="bigTeamsBox">
               <span class="teamsChecklist"><p class="one">Real-time Collaboration</p></span>
