--- a/pages/notes.html
+++ b/pages/notes.html
@@ -55,6 +55,9 @@
           <button class="toolbar-icons copy-btn">
             <img src="assets/copy.png" alt="">
           </button>
+          <button class="toolbar-icons speaker-btn">
+            <img src="assets/speaker.png" alt="">
+          </button>
           <button class="toolbar-icons mic-btn">
             <img src="assets/mic.png" alt="">
           </button>
