--- a/pages/login.html
+++ b/pages/login.html
@@ -48,12 +48,12 @@
           <h2><span>OR</span></h2>
         </div>
         <div class="alternate-login">
-          <img class="icons" src="assets/github.png" alt="">
-          <img class="icons" src="assets/google.png" alt="">
-          <img class="icons" src="assets/facebook.png" alt="">
+          <img class="icons" src="assets/github.png" alt="" title="Sign in with Github">
+          <img class="icons" src="assets/google.png" alt="" title="Sign in with Google">
+          <img class="icons" src="assets/facebook.png" alt="" title="Sign in with Facebook">
         </div>
         <div class="no-account">
-          <input class="alternative-button" type="submit" value="Don't have an account?">
+          <input id="no-account" class="alternative-button" type="submit" value="Don't have an account?">
         </div>
       </div>
     </div>
