--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
               </div>
               <div class="actions">
                 <a href="../pages/register.html" class="signup">Sign Up</a>
-                <a href="../pages/login.html" class="signin">Already a User? Sign In</a> 
+                <a class="signin">Already a User? Sign In</a> 
               </div>
             </div>
             <img src="assets/phone-demo.png" class="phone" />
@@ -94,7 +94,7 @@
         </div>
         </div>
     </main>
-	<script src="script.js"></script>
+	<!-- <script src="script.js"></script> -->
   </body>
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </html>
