--- a/pages/notes.html
+++ b/pages/notes.html
@@ -67,6 +67,9 @@
           <button class="toolbar-icons settings-btn">
             <img src="assets/settings.png" alt="Settings">
           </button>
+          <button class="toolbar-icons logout-btn">
+            <img src="assets/logout.png" alt="" title="Logout">
+          </button>
         </div>
       </div>
     <div class="notes_main">
