--- a/pages/notes.html
+++ b/pages/notes.html
@@ -62,10 +62,10 @@
             <img src="assets/mic.png" alt="" title="Microphone">
           </button>
           <button class="toolbar-icons share-btn">
-            <img src="assets/share.png" alt="Share">
+            <img src="assets/share.png" alt="" title="Share">
           </button>
           <button class="toolbar-icons settings-btn">
-            <img src="assets/settings.png" alt="Settings">
+            <img src="assets/settings.png" alt="" title="Settings">
           </button>
           <button class="toolbar-icons logout-btn">
             <img src="assets/logout.png" alt="" title="Logout">
