--- a/pages/notes.html
+++ b/pages/notes.html
@@ -49,6 +49,13 @@
         </div>
 
         <div class="general">
+          <div class="dropdown">
+            <button class="toolbar-icons translate-btn">
+              <img src="assets/translate.jpg" alt="" title="Translate">
+            </button>
+            <div class="dropdown-content translator">
+            </div>
+          </div>
           <button class="toolbar-icons search-btn">
             <img src="assets/search.png" alt="" title="Search">
           </button>
@@ -58,6 +65,14 @@
           <button class="toolbar-icons speaker-btn">
             <img src="assets/speaker.png" alt="" title="Text-to-speech"">
           </button>
+          <div class="dropdown">
+            <button class="toolbar-icons language-btn">
+              <img src="assets/globe.png" alt="" title="Choose a language"">
+            </button>
+            <div class="dropdown-content languages">
+            </div>
+          </div>
+          
           <button class="toolbar-icons mic-btn">
             <img src="assets/mic.png" alt="" title="Microphone">
           </button>
