--- a/pages/register.html
+++ b/pages/register.html
@@ -15,12 +15,10 @@
           <a href="index.html">
             <img src="assets/logo.png" alt="logo">
           </a>
-          <a href="pricing.html">Pricing</a>
-          <a href="teams.html">For Teams</a>
-          <a href="individuals.html">For Individuals</a>
-          <a href="mission.html">Mission</a>
         </div>
         <div class="general">
+          <a href="pricing.html">Pricing</a>
+          <a href="mission.html">Mission</a>
           <a href="help.html">Help</a>
           <a href="download.html" class="btn">Download</a>
         </div>
@@ -49,7 +47,7 @@
 
             </div>
             <button class = 'register-btn'>Sign up</button>
-            <a href="./login.html">Already a user? Sign in</a>
+            <a class="already-a-user" href="./login.html">Already a user? Sign in</a>
           </div>
         </div>
       </div>      
