--- a/pages/notes.html
+++ b/pages/notes.html
@@ -53,7 +53,7 @@
             <button class="toolbar-icons translate-btn">
               <img src="assets/translate.jpg" alt="" title="Translate">
             </button>
-            <div class="dropdown-content translator">
+            <div class="dropdown-content">
             </div>
           </div>
           <button class="toolbar-icons search-btn">
@@ -62,17 +62,13 @@
           <button class="toolbar-icons copy-btn">
             <img src="assets/copy.png" alt="" title="Copy">
           </button>
-          <button class="toolbar-icons speaker-btn">
-            <img src="assets/speaker.png" alt="" title="Text-to-speech"">
-          </button>
           <div class="dropdown">
-            <button class="toolbar-icons language-btn">
-              <img src="assets/globe.png" alt="" title="Choose a language"">
+            <button class="toolbar-icons speaker-btn">
+              <img src="assets/speaker.png" alt="" title="Text-to-speech"">
             </button>
-            <div class="dropdown-content languages">
+            <div class="dropdown-content">
             </div>
           </div>
-          
           <button class="toolbar-icons mic-btn">
             <img src="assets/mic.png" alt="" title="Microphone">
           </button>
