added splash again

--- a/pages/index.html
+++ b/pages/index.html
@@ -78,6 +78,10 @@
             </div>
         </div>
         <div>
+
+          
+          <img src="assets/splash-img.png" class="splash2" />
+  
         <span class="copy">Copyright © 2023, Western Developers Society
           <div class="button-container">
             <a href="https://www.instagram.com/westerndevsociety/" target="_blank">
