--- a/pages/help.html
+++ b/pages/help.html
@@ -56,8 +56,8 @@
           <a href="https://www.linkedin.com/feed/" target="_blank">
             <img src="assets/in.png" class="instagram-btn">
           </a>
-          <a href="https://www.facebook.com/" target="_blank">
-            <img src="assets/facebook.png" class="instagram-btn" >
+          <a href="https://linktr.ee/westerndevsociety" target="_blank">
+            <img src="assets/linktree.png" class="instagram-btn" >
           </a>
         </div>
       </div>
