--- a/pages/index.html
+++ b/pages/index.html
@@ -85,11 +85,11 @@
             <a href="https://www.instagram.com/westerndevsociety/" target="_blank">
               <img src="assets/instagram.png" class="instagram-btn">
             </a>
-            <a href="https://www.linkedin.com/feed/" target="_blank">
+            <a href="https://www.linkedin.com/company/western-dev-society/" target="_blank">
               <img src="assets/in.png" class="instagram-btn">
             </a>
-            <a href="https://www.facebook.com/" target="_blank">
-              <img src="assets/facebook.png" class="instagram-btn" >
+            <a href="hhttps://linktr.ee/westerndevsociety" target="_blank">
+              <img src="assets/linktree.png" class="instagram-btn" >
             </a>
           </div>
         </div>
