register button fix

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,7 +36,7 @@
                 Access a new way to note-take, connect, and link with other students through new solutions to accessibility. 
               </div>
               <div class="actions">
-                <a href="../pages/register.html" class="signup">Sign Up</a>
+                <a class="signup">Sign Up</a>
                 <a class="signin">Already a User? Sign In</a> 
               </div>
             </div>
